--- a/Classes/AuthenticationViewController.xib
+++ b/Classes/AuthenticationViewController.xib
@@ -12,7 +12,7 @@
 		</object>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="2"/>
+			<integer value="31"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -223,6 +223,32 @@
 							<string key="NSResourceName">cloud-hosting.png</string>
 						</object>
 					</object>
+					<object class="IBUIView" id="434378973">
+						<reference key="NSNextResponder" ref="766721923"/>
+						<int key="NSvFlags">292</int>
+						<object class="NSMutableArray" key="NSSubviews">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBUIImageView" id="349148269">
+								<reference key="NSNextResponder" ref="434378973"/>
+								<int key="NSvFlags">274</int>
+								<string key="NSFrame">{{70, 0}, {784, 748}}</string>
+								<reference key="NSSuperview" ref="434378973"/>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+								<object class="NSCustomResource" key="IBUIImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">silvergradient.png</string>
+								</object>
+							</object>
+						</object>
+						<string key="NSFrame">{{954, 0}, {784, 748}}</string>
+						<reference key="NSSuperview" ref="766721923"/>
+						<object class="NSColor" key="IBUIBackgroundColor">
+							<int key="NSColorSpace">2</int>
+							<bytes key="NSRGB">MC41ODQzMTM3NTAzIDAuNTg4MjM1MzE4NyAwLjU4NDMxMzc1MDMAA</bytes>
+						</object>
+						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+					</object>
 				</object>
 				<string key="NSFrameSize">{1024, 748}</string>
 				<reference key="NSSuperview"/>
@@ -289,6 +315,14 @@
 					</object>
 					<int key="connectionID">22</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">statusView</string>
+						<reference key="source" ref="841351856"/>
+						<reference key="destination" ref="434378973"/>
+					</object>
+					<int key="connectionID">32</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -324,6 +358,7 @@
 							<reference ref="1041419168"/>
 							<reference ref="578896168"/>
 							<reference ref="724786153"/>
+							<reference ref="434378973"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -372,6 +407,20 @@
 						<reference key="object" ref="724786153"/>
 						<reference key="parent" ref="766721923"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">31</int>
+						<reference key="object" ref="434378973"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="349148269"/>
+						</object>
+						<reference key="parent" ref="766721923"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">33</int>
+						<reference key="object" ref="349148269"/>
+						<reference key="parent" ref="434378973"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -389,6 +438,8 @@
 					<string>2.IBPluginDependency</string>
 					<string>23.IBPluginDependency</string>
 					<string>24.IBPluginDependency</string>
+					<string>31.IBPluginDependency</string>
+					<string>33.IBPluginDependency</string>
 					<string>8.IBPluginDependency</string>
 					<string>9.IBPluginDependency</string>
 				</object>
@@ -401,7 +452,9 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>{{121, 69}, {1024, 768}}</string>
+					<string>{{12, 332}, {1024, 768}}</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -425,7 +478,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">25</int>
+			<int key="maxID">34</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -447,6 +500,9 @@
 							<string>largeSpinner</string>
 							<string>smallAuthenticatingLabel</string>
 							<string>smallSpinner</string>
+							<string>statusButton</string>
+							<string>statusScrollView</string>
+							<string>statusView</string>
 							<string>usernameLabel</string>
 							<string>usernameTextField</string>
 						</object>
@@ -458,6 +514,9 @@
 							<string>UIActivityIndicatorView</string>
 							<string>UILabel</string>
 							<string>UIActivityIndicatorView</string>
+							<string>UIButton</string>
+							<string>UIScrollView</string>
+							<string>UIView</string>
 							<string>UILabel</string>
 							<string>UITextField</string>
 						</object>
@@ -663,6 +722,14 @@
 					<reference key="sourceIdentifier" ref="786211723"/>
 				</object>
 				<object class="IBPartialClassDescription">
+					<string key="className">UIScrollView</string>
+					<string key="superclassName">UIView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">UIKit.framework/Headers/UIScrollView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
 					<string key="className">UISearchBar</string>
 					<string key="superclassName">UIView</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
@@ -755,11 +822,13 @@
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<string>cloud-hosting.png</string>
 				<string>rackspacecloud1081.png</string>
+				<string>silvergradient.png</string>
 			</object>
 			<object class="NSMutableArray" key="dict.values">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<string>{279, 62}</string>
 				<string>{1081, 1081}</string>
+				<string>{19, 681}</string>
 			</object>
 		</object>
 		<string key="IBCocoaTouchPluginVersion">82</string>
