--- a/Classes/AuthenticationViewController.xib
+++ b/Classes/AuthenticationViewController.xib
@@ -223,21 +223,35 @@
 							<string key="NSResourceName">cloud-hosting.png</string>
 						</object>
 					</object>
-					<object class="IBUIView" id="434378973">
+					<object class="IBUIView" id="779884442">
 						<reference key="NSNextResponder" ref="766721923"/>
 						<int key="NSvFlags">292</int>
 						<object class="NSMutableArray" key="NSSubviews">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBUIImageView" id="349148269">
-								<reference key="NSNextResponder" ref="434378973"/>
+							<object class="IBUIImageView" id="628084988">
+								<reference key="NSNextResponder" ref="779884442"/>
 								<int key="NSvFlags">274</int>
 								<string key="NSFrame">{{70, 0}, {784, 748}}</string>
-								<reference key="NSSuperview" ref="434378973"/>
+								<reference key="NSSuperview" ref="779884442"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 								<object class="NSCustomResource" key="IBUIImage">
 									<string key="NSClassName">NSImage</string>
 									<string key="NSResourceName">silvergradient.png</string>
+								</object>
+							</object>
+							<object class="IBUIToolbar" id="103891789">
+								<reference key="NSNextResponder" ref="779884442"/>
+								<int key="NSvFlags">266</int>
+								<string key="NSFrame">{{-336, 362}, {768, 44}}</string>
+								<reference key="NSSuperview" ref="779884442"/>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
+								<float key="IBUIAlpha">0.25</float>
+								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+								<int key="IBUIBarStyle">2</int>
+								<object class="NSMutableArray" key="IBUIItems">
+									<bool key="EncodedWithXMLCoder">YES</bool>
 								</object>
 							</object>
 						</object>
@@ -319,9 +333,17 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">statusView</string>
 						<reference key="source" ref="841351856"/>
-						<reference key="destination" ref="434378973"/>
+						<reference key="destination" ref="779884442"/>
 					</object>
 					<int key="connectionID">32</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">statusToolbar</string>
+						<reference key="source" ref="841351856"/>
+						<reference key="destination" ref="103891789"/>
+					</object>
+					<int key="connectionID">37</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -358,7 +380,7 @@
 							<reference ref="1041419168"/>
 							<reference ref="578896168"/>
 							<reference ref="724786153"/>
-							<reference ref="434378973"/>
+							<reference ref="779884442"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -409,17 +431,26 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">31</int>
-						<reference key="object" ref="434378973"/>
+						<reference key="object" ref="779884442"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="349148269"/>
+							<reference ref="628084988"/>
+							<reference ref="103891789"/>
 						</object>
 						<reference key="parent" ref="766721923"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">33</int>
-						<reference key="object" ref="349148269"/>
-						<reference key="parent" ref="434378973"/>
+						<reference key="object" ref="628084988"/>
+						<reference key="parent" ref="779884442"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">35</int>
+						<reference key="object" ref="103891789"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+						</object>
+						<reference key="parent" ref="779884442"/>
 					</object>
 				</object>
 			</object>
@@ -440,6 +471,7 @@
 					<string>24.IBPluginDependency</string>
 					<string>31.IBPluginDependency</string>
 					<string>33.IBPluginDependency</string>
+					<string>35.IBPluginDependency</string>
 					<string>8.IBPluginDependency</string>
 					<string>9.IBPluginDependency</string>
 				</object>
@@ -452,7 +484,8 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>{{12, 332}, {1024, 768}}</string>
+					<string>{{186, 358}, {1024, 768}}</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -478,7 +511,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">34</int>
+			<int key="maxID">37</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -502,6 +535,7 @@
 							<string>smallSpinner</string>
 							<string>statusButton</string>
 							<string>statusScrollView</string>
+							<string>statusToolbar</string>
 							<string>statusView</string>
 							<string>usernameLabel</string>
 							<string>usernameTextField</string>
@@ -516,6 +550,7 @@
 							<string>UIActivityIndicatorView</string>
 							<string>UIButton</string>
 							<string>UIScrollView</string>
+							<string>UIToolbar</string>
 							<string>UIView</string>
 							<string>UILabel</string>
 							<string>UITextField</string>
@@ -751,6 +786,14 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="802756528">
 						<string key="majorKey">IBFrameworkSource</string>
 						<string key="minorKey">UIKit.framework/Headers/UITextField.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UIToolbar</string>
+					<string key="superclassName">UIView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">UIKit.framework/Headers/UIToolbar.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
